<resources>
    <string name="app_name">NotedIn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">NotedIn</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="unfinished">Unfinished</string>
    <string name="finished">Finished</string>
    <string name="very_important">Very Important</string>
    <string name="important">Important</string>
    <string name="category">Category</string>
    <string name="quite_important">Quite Important</string>
    <string name="not_important">Not Important</string>
    <string name="about">About</string>
    <string name="app">App</string>
    <string name="developer">Developer</string>
</resources>